--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudflare-workers-openapi",
+  "name": "storm-worker",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,13 +9,14 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.2.0",
+    "@cloudflare/realtimekit": "^1.1.7",
     "chanfana": "^2.6.3",
     "hono": "^4.6.20",
-    "zod": "^3.24.1",
-    "@cloudflare/realtimekit": "^1.1.7"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "22.13.0",
+    "@types/node": "^22.13.0",
     "@types/service-worker-mock": "^2.0.4",
     "wrangler": "^4.33.1"
   }
