--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,30 +1,28 @@
 {
-  "name": "storm-worker",
-  "main": "src/index.js",
-  "compatibility_date": "2023-07-25",
-  "kv_namespaces": [
-    {
-      "binding": "KV",
-      "id": "<your-kv-namespace-id>"
-    }
-
-  ],
-  "d1_databases": [
-    {
-      "binding": "DB",
-      "database_name": "storm-db",
-      "database_id": "<your-d1-database-id>"
-    }
-  ],
-  "r2_buckets": [
-    {
-      "binding": "BUCKET",
-      "bucket_name": "storm-bucket",
-      "preview_bucket_name": "storm-bucket-preview"
-    }
-  ],
-  "assets": {
-    "binding": "ASSETS",
-    "directory": "public/"
-  }
+	"name": "storm-worker",
+	"main": "src/index.js",
+	"compatibility_date": "2025-07-25",
+	"kv_namespaces": [
+		{
+                    "binding": "KV_BINDING",
+                    "id": "3a5c0f4c328a42fbb97466a2d73d7115"
+                 }
+	],
+	"d1_databases": [
+		{
+			"binding": "D1Database",
+			"database_name": "D1Database",
+			"database_id": "4e244538-34af-48d5-bac3-b264265cbc81"
+		}
+	],
+	"r2_buckets": [
+		{
+			"binding": "BUCKET",
+			"bucket_name": "storm-bucket"
+		}
+	],
+	"assets": {
+		"binding": "ASSETS",
+		"directory": "public/"
+	}
 }
