--- a/stormwork/wrangler.jsonc
+++ b/stormwork/wrangler.jsonc
@@ -5,7 +5,7 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "stormwork",
-	"main": "src/index.ts",
+	"main": "../src/index.ts",
 	"compatibility_date": "2025-09-02",
 	"observability": {
 		"enabled": true
