--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,15 +1,38 @@
 {
 
-	"observability":{
-			"enabled": true
-    	},
+	"observability": {
+		"enabled": false,
+		"head_sampling_rate": 1,
+		"logs": {
+			"enabled": true,
+			"head_sampling_rate": 1,
+			"persist": true,
+			"invocation_logs": true
+		},
+		"traces": {
+			"enabled": true,
+			"persist": true,
+			"head_sampling_rate": 1
+		}
+	},
 	"name": "storm-worker",
 	"main": "src/index.js",
 	"compatibility_date": "2025-08-25",
+	"placement": {
+		"mode": "smart"
+	},
 	"routes": [
 		{
 			"pattern": "track.hwmnbn.me",
 			"custom_domain": true
+		},
+		{
+			"pattern": "mars.hwmnbn.me/*",
+			"zone_name": "hwmnbn.me"
+		},
+		{
+			"pattern": "mars.hwmnbn.me",
+			"zone_name": "hwmnbn.me"
 		}
 	],
 	"kv_namespaces": [
@@ -34,5 +57,9 @@
 	"assets": {
 			"binding": "ASSETS",
 			"directory": "public/"
+	},
+	"vars": {
+		"MEVID_STREAM_INGEST_URL": "https://mevid.example.com/api/stream/superchild",
+		"MEVID_STREAM_TOKEN": "SET_ME"
 	}
 }
